--- a/index.html
+++ b/index.html
@@ -6,14 +6,17 @@
     <link href="game.css" rel="stylesheet">
     <link rel="shortcut icon" href="favicon.ico">
 </head>
+
 <body>
     <audio src="" autoplay loop id="audio"></audio>
-    <div id="sc_1" class="sc"> <!--Screen 1-->
+
+    <div id="sc_1" class="sc">
         <div class="oui">
             Pokemon RPG<br>
             <button onclick="sc_sw('sc_2')">Start</button>
         </div>
     </div>
+
     <div id="sc_2" class="sc">
         <div class="oui">
         Welcome to the World of Pokemon!<br>
@@ -28,6 +31,7 @@
         (Click on an egg to choose.)
         </div>
     </div>
+
     <div id="sc_3" class="sc">
         <div class="oui">
             Are you sure you want to pick this egg?<br>
@@ -40,6 +44,7 @@
         </div>
     </div>
     <div id="sc_4" class="sc">
+<!-- Pokemon -->
         <div class="oui">
             <span id="pk_nm">???</span><br>
             <div class="ui">
@@ -59,17 +64,21 @@
                 </div>
             </div>
         </div>
+<!-- Actions -->
         <div class="hidden oui" id="con_act">
             Actions<br>
+<!-- Fight -->
             <div class="ui" style="padding: 5px;">
                 <button onclick="tog_vis('fgt')">Fight</button><br>
                 <div class="hidden ui" style="padding:5px;" id="fgt">
                     <button>Rival</button>
                 </div>
+<!-- Explore -->
                 <button onclick="tog_vis('epl')">Explore</button><br>
                 <div class="hidden ui" style="padding:5px;" id="epl">
-                    <button>Route 1</button>
+                    <button onclick="epl('r1')">Route 1</button>
                 </div>
+<!-- Train -->
                 <button onclick="tog_vis('trn')">Train</button>
                 <div class="hidden ui" style="padding:5px;" id="trn">
                     <img src="bag/HP_S.png">
@@ -81,8 +90,12 @@
                 </div>
             </div>
         </div>
-        <div id="ntf" class="hidden oui">
+<!-- Notifications -->
+        <div id="con_ntf" class="hidden oui">
+            <div id="ntf" class="hidden"></div>
+            <button id="btn_clm" class="hidden">Claim</button>
         </div>
+<!-- Incubator -->
         <div class="oui" id="con_inc">
             Incubator<br>
             <div id="inc" class="ui">
