--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </div>
 <!-- Notifications -->
         <div id="con_ntf" class="hidden oui">
-            <div id="ntf" class="hidden"></div>
+            <div id="ntf"></div>
             <button id="btn_clm" class="hidden">Claim</button>
         </div>
 <!-- Incubator -->
