--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>Pokemon RPG v0.2</title>
+    <title>Pokemon RPG (4.6.18, 2:47)</title>
     <script type="text/javascript" src="game.js"></script>
     <link href="game.css" rel="stylesheet">
     <link rel="shortcut icon" href="favicon.ico">
