Comment Awards v100 (4/7/18) (2:53 AM)
-Comment Overhaul
 -Improved Structure
 -Overall Restructering of Code
 -Improved Quality of Comments

Good comments streamline the coding process. Making it a lot easier to find and pick out meaning from code. Although this has no direct benefit to the user, it is well worth it for the increase in speed.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+<!-- Head -->
     <title>Pokemon RPG (4.6.18, 2:47)</title>
     <script type="text/javascript" src="game.js"></script>
     <link href="game.css" rel="stylesheet">
@@ -147,7 +148,7 @@
             <button onclick="inc_ftc()" id="btn_ftc">Retrieve</button>
         </div>
     </div>
-<!-- Screen 5-->
+<!-- Rival Fight -->
     <div id="sc_5" class="sc">
         <button onclick="sc_sw('sc_4')">fk go bak</button>
     </div>
