--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
         </div>
 <!-- Actions -->
         <div class="hidden oui" id="con_act">
-            <span id="head_act">Actions</span><br>
-            <div class="ui" style="padding: 5px;">
+            <span id="head_act_br"><span id="head_act">Actions</span><br></span>
+            <div>
 <!-- Fight -->
                 <span id="btn_fig"><button onclick="tog_ab(); tog_vis('fig_sel'); u_ah('Fight');">Fight</button><br></span>
                 <div class="hidden" id="fig_sel">
@@ -90,7 +90,6 @@
                     <button onclick="tog_invis('btn_epl'); tog_invis('btn_trn'); tog_invis('btn_fig'); tog_vis('fig_sel'); u_ah('Actions');"><< Back</button>
                 </div>
                 <div class="hidden" id="inf_riv">
-                    Gary<br>
                     <img src="trainer/gary.png"><br>
                     <button onclick="sc_sw('sc_5')">Battle</button><br>
                     <button onclick="tog_vis('riv_team'); tog_vis('inf_riv'); u_ah('Team');">Team</button><br>
@@ -105,7 +104,7 @@
 <!-- Explore -->
                 <span id="btn_epl"><button onclick="tog_vis('epl_menu'); tog_ab(); u_ah('Explore');">Explore</button><br></span>
                 <div class="hidden" id="epl_menu">
-                    <button onclick="tog_vis('epl_menu'); tog_vis('epl_r1'); epl('r1'); u_ah('Route 1');">Route 1</button><br>
+                    <button onclick="tog_vis('epl_menu'); tog_vis('epl_r1'); epl('r1'); tog_invis('head_act_br');">Route 1</button><br>
                     <button onclick="tog_vis('epl_menu'); tog_invis('btn_epl'); tog_invis('btn_fig'); tog_invis('btn_trn'); u_ah('Actions');"><< Back</button>
                 </div>
                 <div class="hidden" id="epl_r1">
@@ -117,12 +116,12 @@
 <!-- Train -->
                 <span id="btn_trn"><button onclick="tog_vis('trn_menu'); tog_ab(); u_ah('Train')">Train</button></span>
                 <div class="hidden" id="trn_menu">
-                    <img src="bag/HP_S.png" onclick="trn(0); tog_vis('trn_menu'); tog_vis('trn_wait'); u_ah(bag[0] + ' Bag');" class="c">
-                    <img src="bag/ATK_S.png" onclick="trn(1); tog_vis('trn_menu'); tog_vis('trn_wait'); u_ah(bag[1] + ' Bag');" class="c">
-                    <img src="bag/DEF_S.png" onclick="trn(2); tog_vis('trn_menu'); tog_vis('trn_wait'); u_ah(bag[2] + ' Bag');" class="c">
-                    <img src="bag/SPA_S.png" onclick="trn(3); tog_vis('trn_menu'); tog_vis('trn_wait'); u_ah(bag[3] + ' Bag');" class="c">
-                    <img src="bag/SPD_S.png" onclick="trn(4); tog_vis('trn_menu'); tog_vis('trn_wait'); u_ah(bag[4] + ' Bag');" class="c">
-                    <img src="bag/SPE_S.png" onclick="trn(5); tog_vis('trn_menu'); tog_vis('trn_wait'); u_ah(bag[5] + ' Bag');" class="c"><br>
+                    <img src="bag/HP_S.png" onclick="trn(0); tog_vis('trn_menu'); tog_vis('trn_wait'); tog_invis('head_act_br');" class="c">
+                    <img src="bag/ATK_S.png" onclick="trn(1); tog_vis('trn_menu'); tog_vis('trn_wait'); tog_invis('head_act_br');" class="c">
+                    <img src="bag/DEF_S.png" onclick="trn(2); tog_vis('trn_menu'); tog_vis('trn_wait'); tog_invis('head_act_br');" class="c">
+                    <img src="bag/SPA_S.png" onclick="trn(3); tog_vis('trn_menu'); tog_vis('trn_wait'); tog_invis('head_act_br');" class="c">
+                    <img src="bag/SPD_S.png" onclick="trn(4); tog_vis('trn_menu'); tog_vis('trn_wait'); tog_invis('head_act_br');" class="c">
+                    <img src="bag/SPE_S.png" onclick="trn(5); tog_vis('trn_menu'); tog_vis('trn_wait'); tog_invis('head_act_br');" class="c"><br>
                     <button onclick="tog_vis('trn_menu'); tog_ab(); u_ah('Actions')"><< Back</button>
                 </div>
                 <div class="hidden" id="trn_wait">
@@ -179,14 +178,14 @@
         </div><br>
         <div class="oui" id="pk_act">
             What will Bulbasaur do?<br>
-            <div class="ui" style="padding: 5px;">
-                <button onclick="tog_invis('pk_act'); tog_vis('pk_atk')">Attack</button><button onclick="tog_invis('pk_act'); tog_vis('pk_bag')">Bag</button><br>
-                <button onclick="tog_invis('pk_act'); tog_vis('pk_sw')">Pokemon</button><button>Run</button>
+            <div>
+                <button onclick="tog_invis('pk_act'); tog_vis('pk_atk')" id="btn_atk" class="btl_ui">Attack</button><button onclick="tog_invis('pk_act'); tog_vis('pk_bag')" id="btn_bag" class="btl_ui">Bag</button><br>
+                <button onclick="tog_invis('pk_act'); tog_vis('pk_sw')" id="btn_pk" class="btl_ui">Pokemon</button><button id="btn_run" class="btl_ui">Run</button>
             </div>
         </div>
         <div id="pk_atk" class="hidden oui">
             Attacks<br>
-            <div class="ui" style="padding: 5px;">
+            <div>
                 <button>---</button><br>
                 <button>---</button><br>
                 <button>---</button><br>
